# Destop_college

./: CMakeLists.txt  README.md
lib/share/: INFO_BIN  INFO_SRC  libmysqlclient.so.21
src/: LoginWindow.cpp  LoginWindow.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp  picture.qrc
src/testing/: teacher_check.cpp  teacher_check.h  test_student.cpp  test_student.h
